--- a/sattre/package.json
+++ b/sattre/package.json
@@ -12,7 +12,10 @@
     "bootstrap": "^3.4.1",
     "core-js": "^3.6.5",
     "eslint-plugin-prettier": "^3.4.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1",
+    "vue-video-player": "^5.0.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
