add  interface of users curl

--- a/server/package.json
+++ b/server/package.json
@@ -14,14 +14,16 @@
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
+    "koa-json-error": "^3.1.2",
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
+    "koa-parameter": "^3.0.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
-    "pug": "^2.0.3",
     "mongodb": "^3.6.7",
-    "mongoose": "^5.12.10"
+    "mongoose": "^5.12.10",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
